docs: move docs from gh-pages branch

--- a/bower.json
+++ b/bower.json
@@ -27,10 +27,12 @@
     "test",
     "tests",
     "src",
-    "Gulpfile.js",
+    "docs",
+    "banner.jpg",
+    "gulpfile.js",
     "package.json"
   ],
   "dependencies": {
-    "jquery": ">=1.7"
+    "jquery": ">=1.8"
   }
 }
